specs/001-typescript-to-zig-native/examples/valid/arrays.ts
let nums: int[] = [1, 2, 3];
console.log(nums[0]);
console.log(nums.length);
