specs/001-typescript-to-zig-native/examples/invalid/array-index-type.ts
let nums: int[] = [1, 2];
console.log(nums["0"]);
